libf2c2 (20240504-1) unstable; urgency=medium

  * Permanent URL redirect.
  * Remove unused subst variable.
  * Track changes to lintian output format.
  * New upstream version
  * Update standards version to 4.7.0, no changes needed.

 -- Barak A. Pearlmutter <bap@debian.org>  Fri, 07 Jun 2024 16:59:10 +0100

libf2c2 (20140711-1) unstable; urgency=medium

  [Helmut Grohne]
  * Fix FTCBFS: (Closes: #964374)
    + Let dh_auto_build pass cross tools to make.
    + Make debian/make_lib use the passed cross compiler.
    + Pass a cross ld from dpkg's buildtools.mk to make.
    + cross.patch: Make ld substitutable in makefile.u.

  [ Ondřej Nový ]
  * d/changelog: Remove trailing whitespaces
  * d/control: Remove trailing whitespaces
  * d/rules: Remove trailing whitespaces

  [ Barak A. Pearlmutter ]
  * Trim trailing whitespace.
  * Use secure URI in Homepage field.
  * Bump debhelper from old 11 to 13.
  * Set debhelper-compat version in Build-Depends.
  * Expand comment in debian/watch
  * Patches to use u?int*_t and size_t (closes: #748989, #800040)
  * Take multi-arch hinter's hints (closes: #964373)
  * Ditch dh-exec in favour of dh13 facilities
  * Rules-Requires-Root: no

 -- Barak A. Pearlmutter <bap@debian.org>  Sat, 11 Jul 2020 00:07:57 +0100

libf2c2 (20130926-3) unstable; urgency=medium

  * Team upload.
  * Move packaging to salsa.debian.org
  * cme fix dpkg-control
  * debhelper 11

 -- Andreas Tille <tille@debian.org>  Thu, 22 Feb 2018 13:36:24 +0100

libf2c2 (20130926-2) unstable; urgency=medium

  * Team upload
  * Make suitable for creating libraries to be used in non-Fortran programs
    (thanks for the patch to Christian Seiler <christian@iwakd.de>)
    Closes: #826253

 -- Andreas Tille <tille@debian.org>  Fri, 03 Jun 2016 22:11:58 +0200

libf2c2 (20130926-1) unstable; urgency=medium

  * Team upload

  [ Barak A. Pearlmutter ]
  * New upstream version

  [ Andreas Tille ]
  * Add two files that are included in the clapack source but missing here